# specflow-cli

./: .gitignore  CHANGELOG.md  CLAUDE-MD-TEMPLATE.md  CLAUDE.md  Makefile  PROMPT-TEMPLATE.md  README.md  SKILL.md  install-hooks.sh  package-lock.json  package.json  setup-project.sh  tsconfig.json  verify-setup.sh
.specflow/: knowledge.db
.specflow/contracts/: doc_body_consistency.yml  feature_preflight.yml  feature_specflow_project.yml  spec_coupling_core.yml  yaml_safety.yml
agents/: adoption-advisor.md  agentlist.md  agentnames.md  board-auditor.md  ci-builder.md  contract-generator.md  heal-loop.md  pre-flight-simulator.md  specflow-uplifter.md  sprint-executor.md  waves-controller.md
context/: SPEC-TO-CONTRACT.md
demo/: IMPLEMENTATION-PLAN.md  QUICKSTART.md  README.md  demo.js  package-lock.json  package.json
demo/docs/: contract.yml  spec.md
demo/src/: auth.js
demo/states/: trap.js
docs/: CI-INTEGRATION.md  contract-graph.md  getting-started.md  preflightprd.md
docs-2/: README.md
docs-2/adrs/: ADR-001-repository-structure.md  ADR-002-nodejs-over-bash.md  ADR-003-cli-architecture.md  ADR-004-mcp-server-design.md  ADR-005-agent-registry.md
docs-2/ddds/: DDD-001-contract-engine.md  DDD-002-enforcement-pipeline.md  DDD-003-agent-registry.md
docs-2/plan/: MASTER-PLAN.md
docs-2/prds/: PRD-002-mcp-server.md  (+3 more)
hooks/: README.md  check-pipeline-compliance.sh  post-build-check.sh  run-journey-tests.sh  settings.json
native/: Cargo.toml
scripts/: install.sh  specflow-compile.cjs  verify-graph.cjs  verify-graph.js
src/: main.rs
ts-src/: cli.ts
(+149 files in other folders)
