[package]
name = "specflow-native"
version = "0.1.7"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
glob = "0.3"
anyhow = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
